Antes de migrar a angular 17

--- a/src/app/pages/components/actividad-m1/actividad-m1.component.html
+++ b/src/app/pages/components/actividad-m1/actividad-m1.component.html
@@ -7,10 +7,10 @@
         <h2>MÓDULO 1</h2>
         <p>INTRODUCCIÓN AL</p>
         <p>COOPERATIVISMO</p>
-        <img src="assets/onda-m1.png" alt="">
+        <img src="assets/onda-m1.png" alt="onda">
       </div>
       <div class="col-sm-12 col-md-6 d-flex align-items-center justify-content-center">
-        <img src="assets/portada-m1.png" alt="">
+        <img src="assets/portada-m1.png" alt="manos al centro">
       </div>
     </div>
   </div>
@@ -22,7 +22,7 @@
       <div class="col-sm-12 col-md-6 d-flex align-items-center justify-content-center" style="--bs-gutter-x: 0rem;">
 
         <img class="animate__animated animate__pulse animate__infinite animate__slow" src="assets/port-objgen-m1.png"
-          alt="">
+          alt="manos objetivo general">
 
       </div>
       <div
@@ -76,7 +76,7 @@
   <div class="container">
     <div class="row">
       <div class="d-flex align-items-center justify-content-center">
-        <img src="assets/puerco.png" alt="">
+        <img src="assets/puerco.png" alt="puerco rosa">
       </div>
       <div class="int-content text-center">
         <h2>INTRODUCCIÓN</h2>
@@ -513,12 +513,12 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img class="img-piramides" src="assets/piramides.svg" alt="">
+        <img class="img-piramides" src="assets/piramides.svg" alt="piramides">
       </div>
       <div class="col">
         <div class="row flex-column">
           <div class="col">
-            <img class="img-templos" src="assets/templo.svg" alt="">
+            <img class="img-templos" src="assets/templo.svg" alt="templo">
           </div>
           <div class="col">
             <h2 class="inf-add-mx text-end">Información Adicional: Cooperativismo en México.</h2>
@@ -564,7 +564,7 @@
         </div>
       </div>
       <div class="col-md-1 d-none d-md-flex align-items-center flex-wrap">
-        <img class="flecha-derecha" src="assets/flecha-derecha-blanca.svg" alt="">
+        <img class="flecha-derecha" src="assets/flecha-derecha-blanca.svg" alt="flecha derecha blanca">
       </div>
       <div class="col-12 col-md-5 d-flex justify-content-center align-items-center">
         <div class="card-colonial">
@@ -615,7 +615,7 @@
     </div>
 
 
-    <img class="cinta-precidente" src="assets/presidente.svg" alt="">
+    <img class="cinta-precidente" src="assets/presidente.svg" alt="presidente Plutarco Elías Calles">
 
 
     <div class="epoca-pos" style="margin: 30px 0;">
@@ -894,7 +894,7 @@
         e identificación del movimiento Cooperativo.
       </p>
 
-      <img class="bandera-bottom" src="assets/bandera_blanca.svg" alt="">
+      <img class="bandera-bottom" src="assets/bandera_blanca.svg" alt="bandera blanca">
 
     </div>
 
@@ -909,7 +909,7 @@
 
     <div class="row flex-column flex-md-row align-items-center justify-content-center">
       <div class="col-12 col-md-4">
-        <img class="tv-lgbt" src="assets/tv-lgbt.svg" alt="">
+        <img class="tv-lgbt" src="assets/tv-lgbt.svg" alt="tv lgbt">
       </div>
       <div class="col-12 col-md-8">
         <div class="hoja-colores">
@@ -934,7 +934,7 @@
     <div class="los-pinos">
       <div class="row">
         <div class="col-12 col-md-4">
-          <img src="assets/pin-pinos.svg" alt="">
+          <img src="assets/pin-pinos.svg" alt="pin pinos">
         </div>
         <div class="col-12 col-md-8">
 
