--- a/src/app/pages/components/edit-perfil/edit-perfil.component.html
+++ b/src/app/pages/components/edit-perfil/edit-perfil.component.html
@@ -5,7 +5,7 @@
       <!-- foto -->
       <div class="col-sm-3 col-12">
 
-        <img src="assets/perfil-usuario.jpg" class="img-fluid rounded" alt="...">
+        <img src="assets/perfil-usuario.jpg" class="img-fluid rounded" alt="usuario">
         <input class="form-control my-3" type="file" id="formFile">
 
       </div>
