--- a/src/app/pages/page/modulo2/modulo2.component.html
+++ b/src/app/pages/page/modulo2/modulo2.component.html
@@ -3,7 +3,7 @@
   <section class="modulo-dos">
     <div class="info animated-element" (window:scroll)="onScrollAnimated()">
       <h1 class="animated-element">MÓDULO 2</h1>
-      <img src="assets/img-modulo2/Recurso19.webp" alt="">
+      <img src="assets/img-modulo2/Recurso19.webp" alt="Hoja blanca">
     </div>
   </section>
 
@@ -84,27 +84,27 @@
 
   <section class="que-es-una-cooperativa">
     <div class="info">
-      <img src="assets/img-modulo2/que-es-una-cooperativa.svg" alt="" class="flash-element"
+      <img src="assets/img-modulo2/que-es-una-cooperativa.svg" alt="cinta que es una cooperativa" class="flash-element"
         (window:scroll)="onScrollFlash()">
       <div class="row align-items-center">
         <div class="col-12 col-md-6">
-          <img src="assets/img-modulo2/7.svg" alt="" class="backInLeft-element" (window:scroll)="onScrollBackInLeft()">
+          <img src="assets/img-modulo2/7.svg" alt="Nota azul" class="backInLeft-element" (window:scroll)="onScrollBackInLeft()">
         </div>
         <div class=" col-12 col-md-6">
-          <img src="assets/img-modulo2/6.svg" alt="" class="backInRight-element"
+          <img src="assets/img-modulo2/6.svg" alt="Nota azul" class="backInRight-element"
             (window:scroll)="onScrollBackInRight()">
         </div>
         <div class=" col-12 col-md-6 mb-4">
-          <img src="assets/img-modulo2/4.svg" alt="" class="backInLeft-element" (window:scroll)="onScrollBackInLeft()">
+          <img src="assets/img-modulo2/4.svg" alt="Nota amarilla" class="backInLeft-element" (window:scroll)="onScrollBackInLeft()">
         </div>
         <div class=" col-12 col-md-6">
-          <img src="assets/img-modulo2/5.svg" alt="" class="backInRight-element">
+          <img src="assets/img-modulo2/5.svg" alt="Nota azul" class="backInRight-element">
         </div>
         <div class="col-12 col-md-6">
-          <img src="assets/img-modulo2/1.svg" alt="" class="backInLeft-element" (window:scroll)="onScrollBackInLeft()">
+          <img src="assets/img-modulo2/1.svg" alt="Nota azul" class="backInLeft-element" (window:scroll)="onScrollBackInLeft()">
         </div>
         <div class=" col-12 col-md-6">
-          <img src="assets/img-modulo2/3.svg" alt="" class="backInRight-element">
+          <img src="assets/img-modulo2/3.svg" alt="Nota amarilla" class="backInRight-element">
         </div>
       </div>
 
@@ -118,11 +118,11 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
-            <img id="florencio" src="assets/img-modulo2/florencio.png" alt="" class="fadeInDown-element"
+            <img id="florencio" src="assets/img-modulo2/florencio.png" alt="Florencio Eguía Villaseñor" class="fadeInDown-element"
               (window:scroll)="onScrollFadeInDown()">
           </div>
           <div class="px-lg-5 col-12 col-md-6 col-lg-8">
-            <img id="img-title" src="assets/img-modulo2/florencio-title.svg" alt="" class="backInRight-element">
+            <img id="img-title" src="assets/img-modulo2/florencio-title.svg" alt="Cinta Florencio" class="backInRight-element">
             <p class="backInRight-element">
               Su pasión para promover el ahorro, la
               ayuda mutua y la Educación
@@ -147,11 +147,11 @@
         <div class="row">
           <div class="hoja-naranja col-12 col-lg-7">
 
-            <img src="assets/img-modulo2/florencio-hoja-naranja.svg" alt="" class="fadeInDown-element">
+            <img src="assets/img-modulo2/florencio-hoja-naranja.svg" alt="hoja naranja" class="fadeInDown-element">
 
           </div>
           <div class="florencio-buzon col-12 col-lg-5">
-            <img src="assets/img-modulo2/florencio-buzon.svg" alt="" class="backInRight-element">
+            <img src="assets/img-modulo2/florencio-buzon.svg" alt="buzon azul" class="backInRight-element">
           </div>
         </div>
       </div>
@@ -166,7 +166,7 @@
     <div class="bg">
       <div class="container">
 
-        <img src="assets/img-modulo2/principios-cooperativos.svg" alt="" class="flash-element">
+        <img src="assets/img-modulo2/principios-cooperativos.svg" alt="cinta principios cooperativos" class="flash-element">
         <p class="backInUp-element" (window:scroll)="onScrollBackInUp()">Los Principios Cooperativos son las directrices
           mediante las cuales, las
           Cooperativas ponen en práctica sus valores.
@@ -189,7 +189,7 @@
           cada uno:
         </p>
 
-        <img src="assets/img-modulo2/manos.svg" alt="" class="pulse-element" (window:scroll)="onScrollpulse()">
+        <img src="assets/img-modulo2/manos.svg" alt="manos azules" class="pulse-element" (window:scroll)="onScrollpulse()">
 
       </div>
     </div>
@@ -202,7 +202,7 @@
       <table>
         <tbody>
           <tr>
-            <td class="image"><img src="assets/img-modulo2/pin1.svg" alt="" class="flip-element"
+            <td class="image"><img src="assets/img-modulo2/pin1.svg" alt="pin manos" class="flip-element"
                 (window:scroll)="onScrollFlip()"></td>
             <td>
               <div class="desc backInRight-element" (window:scroll)="onScrollBackInRight()">
@@ -216,7 +216,7 @@
             </td>
           </tr>
           <tr>
-            <td class="image"><img src="assets/img-modulo2/pin2.svg" alt="" class="flip-element"></td>
+            <td class="image"><img src="assets/img-modulo2/pin2.svg" alt="pin rompecabeza" class="flip-element"></td>
             <td>
               <div class="desc backInRight-element" (window:scroll)="onScrollBackInRight()">
 
@@ -232,7 +232,7 @@
             </td>
           </tr>
           <tr>
-            <td class="image"><img src="assets/img-modulo2/pin3.svg" alt="" class="flip-element"></td>
+            <td class="image"><img src="assets/img-modulo2/pin3.svg" alt="pin moneda" class="flip-element"></td>
             <td>
               <div class="desc backInRight-element" (window:scroll)="onScrollBackInRight()">
 
@@ -255,7 +255,7 @@
             </td>
           </tr>
           <tr>
-            <td class="image"><img src="assets/img-modulo2/pin4.svg" alt="" class="flip-element"></td>
+            <td class="image"><img src="assets/img-modulo2/pin4.svg" alt="pin puño cerrado" class="flip-element"></td>
             <td>
               <div class="desc backInRight-element" (window:scroll)="onScrollBackInRight()">
 
@@ -271,7 +271,7 @@
             </td>
           </tr>
           <tr>
-            <td class="image"><img src="assets/img-modulo2/pin5.svg" alt="" class="flip-element"></td>
+            <td class="image"><img src="assets/img-modulo2/pin5.svg" alt="pin libro" class="flip-element"></td>
             <td>
               <div class="desc backInRight-element" (window:scroll)="onScrollBackInRight()">
 
@@ -287,7 +287,7 @@
             </td>
           </tr>
           <tr>
-            <td class="image"><img src="assets/img-modulo2/pin6.svg" alt="" class="flip-element"></td>
+            <td class="image"><img src="assets/img-modulo2/pin6.svg" alt="pin manos estrechadas" class="flip-element"></td>
             <td>
               <div class="desc backInRight-element" (window:scroll)="onScrollBackInRight()">
 
@@ -301,7 +301,7 @@
             </td>
           </tr>
           <tr>
-            <td class="image"><img src="assets/img-modulo2/pin7.svg" alt="" class="flip-element"></td>
+            <td class="image"><img src="assets/img-modulo2/pin7.svg" alt="pin 4 manos sujetadas" class="flip-element"></td>
             <td>
               <div class="desc backInRight-element" (window:scroll)="onScrollBackInRight()">
 
