--- a/src/app/pages/page/modulo3/modulo3.component.html
+++ b/src/app/pages/page/modulo3/modulo3.component.html
@@ -3,7 +3,7 @@
   <section class="inicio-m3 d-flex">
     <div class="container animated-element" (window:scroll)="onScrollAnimated()">
       <h1 class="title">Módulo 3</h1>
-      <img src="assets/img-modulo3/cooperativas 2.svg" class="subtitle" alt="">
+      <img src="assets/img-modulo3/cooperativas 2.svg" class="subtitle" alt="cooperativas 2">
     </div>
   </section>
 
@@ -12,10 +12,10 @@
     <div class="container">
       <div class="row justify-content-center align-items-center mb-5">
         <div class="col-12 col-md-6 d-flex justify-content-center mb-4">
-          <img class="obj-gen-img fade-in-left" (window:scroll)="onScrollFadeInLeft()" src="assets/img-modulo3/objetivo-general.svg" alt="">
+          <img class="obj-gen-img fade-in-left" (window:scroll)="onScrollFadeInLeft()" src="assets/img-modulo3/objetivo-general.svg" alt="cinta objetivo general">
         </div>
         <div class="col-12 col-md-6 pt-5 pt-md-0 d-flex justify-content-center">
-          <img class="fade-in-right" (window:scroll)="onScrollFadeInRight()" src="assets/img-modulo3/og-engranajes.svg" alt="">
+          <img class="fade-in-right" (window:scroll)="onScrollFadeInRight()" src="assets/img-modulo3/og-engranajes.svg" alt="engranajes">
         </div>
       </div>
 
@@ -41,7 +41,7 @@
       <div class="hoja-circulo jackInTheBox" (window:scroll)="onScrollJackInTheBox()">
         <div class="row justify-content-center">
 
-          <img class="" src="assets/img-modulo3/intro-monedas.svg" alt="">
+          <img class="" src="assets/img-modulo3/intro-monedas.svg" alt="monedas azules">
 
           <h2>INTRODUCCIÓN</h2>
           <p>
@@ -190,7 +190,7 @@
           </thead>
           <tbody>
             <tr>
-              <td><img src="assets/img-modulo3/tabla-t-1.svg" alt=""></td>
+              <td><img src="assets/img-modulo3/tabla-t-1.svg" alt="ley general de sociedades cooperativas"></td>
               <td>Tiene por objeto regular la constitución,
                 organización, funcionamiento y extinción
                 de las Sociedades Cooperativas, así como
@@ -210,7 +210,7 @@
               </td>
             </tr>
             <tr>
-              <td><img src="assets/img-modulo3/tabla-t-2.svg" alt=""></td>
+              <td><img src="assets/img-modulo3/tabla-t-2.svg" alt="lrascap"></td>
               <td>En 2009, el Congreso General de los
                 Estados Unidos Mexicanos expidió la Ley
                 para Regular las Actividades de las
@@ -230,7 +230,7 @@
               </td>
             </tr>
             <tr>
-              <td><img src="assets/img-modulo3/tabla-t-3.svg" alt=""></td>
+              <td><img src="assets/img-modulo3/tabla-t-3.svg" alt="disposiciones socaps"></td>
               <td>Regulación prudencial y criterios contables
                 que deberán adoptar las SOCAP´S con la
                 finalidad de preservar su liquidez, solvencia
@@ -247,10 +247,10 @@
 
       <div class="row mt-4">
         <div class="col-12 col-md-6 mb-4">
-          <img src="assets/img-modulo3/legsocoops-img.svg" alt="">
+          <img src="assets/img-modulo3/legsocoops-img.svg" alt="cinta azul maso">
         </div>
         <div class="col-12 col-md-6">
-          <img src="assets/img-modulo3/legsocoops-img2.svg" alt="">
+          <img src="assets/img-modulo3/legsocoops-img2.svg" alt="cinta azul libro">
         </div>
       </div>
     </div>
@@ -260,14 +260,14 @@
 
     <div class="container">
       <div class="hoja-inclinada">
-        <img src="assets/img-modulo3/estrucutra-socoops.svg" alt="">
+        <img src="assets/img-modulo3/estrucutra-socoops.svg" alt="estrucutra de las socaps">
         <p>La estructura de la administración y la organización de las Sociedades Cooperativas de Ahorro
           y Préstamo se establece sobre sus Órganos de Gobierno, donde los Socios integrantes cumplen
           funciones y roles importantes.<br><br>
           De manera general, la dirección, administración y vigilancia interna de las Sociedades
           Cooperativas, estará a cargo de los Órganos siguientes:</p>
-        <img src="assets/img-modulo3/etiquetas.svg" alt="">
-        <img src="assets/img-modulo3/diagrama-mano.svg" alt="">
+        <img src="assets/img-modulo3/etiquetas.svg" alt="etiquetas">
+        <img src="assets/img-modulo3/diagrama-mano.svg" alt="diagrama mano">
       </div>
 
     </div>
@@ -278,7 +278,7 @@
     <div class="container">
       <div class="hoja-top">
 
-        <img src="assets/img-modulo3/titulo-asable-general.svg" alt="">
+        <img src="assets/img-modulo3/titulo-asable-general.svg" alt="titulo asable general">
 
         <div class="row">
 
@@ -318,7 +318,7 @@
           </div>
 
           <div class="col-12 col-md-4">
-            <img src="assets/img-modulo3/voto.svg" alt="">
+            <img src="assets/img-modulo3/voto.svg" alt="cita voto">
           </div>
           <div class="col-12">
             <div class="block azul">
@@ -367,7 +367,7 @@
                   presentes.</li>
               </ul>
             </div>
-            <img src="assets/img-modulo3/voto-cinta.svg" alt="">
+            <img src="assets/img-modulo3/voto-cinta.svg" alt="voto cinta">
           </div>
 
         </div>
@@ -404,7 +404,7 @@
             Sociedad Cooperativa y por su monto o importancia, necesiten de tal autorización.
           </p>
 
-          <img src="assets/img-modulo3/six-img.svg" alt="">
+          <img src="assets/img-modulo3/six-img.svg" alt="Notas azules y blancas">
 
         </div>
       </div>
@@ -442,7 +442,7 @@
             funcionamiento de la Cooperativa y por el cumplimiento de las normas y reglas
             establecidas.
           </p>
-          <img src="assets/img-modulo3/two-img.svg" alt="">
+          <img src="assets/img-modulo3/two-img.svg" alt="hojas con ilustraciones">
         </div>
       </div>
     </div>
@@ -468,7 +468,7 @@
           comités de la Cooperativa, representar a la Cooperativa en los actos que determinen las
           Bases Constitutivas</p>
 
-        <img src="assets/img-modulo3/two-img-fin.svg" alt="">
+        <img src="assets/img-modulo3/two-img-fin.svg" alt="hojas con ilustraciones">
       </div>
     </div>
 
