--- a/src/app/pages/page/modulo4/modulo4.component.scss
+++ b/src/app/pages/page/modulo4/modulo4.component.scss
@@ -5,11 +5,19 @@
   background-position: $position;
 }
 
+@mixin disflex($justify: center, $align: center, $direction: row) {
+  display: flex;
+  justify-content: $justify;
+  align-items: $align;
+  flex-direction: $direction;
+}
+
 .modulo4 {
 
   h2,
   h3 {
     font-size: 2.2rem;
+    color: #3765ad;
     @media (max-width: 767px) {
       font-size: 2rem;
     }
@@ -18,9 +26,11 @@
   p,
   ul {
     font-size: 1.2rem;
+    color: #3765ad;
     @media (max-width: 767px) {
       font-size: 1rem;
     }
+
     text-align: justify;
   }
 
@@ -51,7 +61,7 @@
   .objetivo-general {
     @include bg-image('cpsp-objgen.webp', left, contain);
     background-color: #5D98A1;
-    color: #336699;
+
     padding: 50px 0;
 
     .tema {
@@ -75,16 +85,20 @@
         border-radius: 13px;
         padding: 10px;
         margin-bottom: 30px;
+
         @media (max-width: 576px) {
           text-align: center;
         }
       }
-      ul{
+
+      ul {
         text-align: end;
         list-style: none;
+
         @media (max-width: 767px) {
           text-align: center;
         }
+
         @media (max-width: 576px) {
           text-align: start;
         }
@@ -98,33 +112,42 @@
 
   }
 
-  .inicio-presente{
+  .inicio-presente {
     background-color: #5D98A1;
     padding: 50px 0;
-    img{
+
+    img {
       width: 100%;
     }
-    .img-inicios{
+
+    .img-inicios {
       display: flex;
       justify-content: center;
       align-items: center;
     }
   }
 
-  .linea-tiempo{
+  .linea-tiempo {
     padding: 50px 0;
     @include bg-image('bg-lineatiempo.svg', top);
-    .lista-linea{
-      color: #336699;
+
+    .lista-linea {
+
       @include bg-image('lista-linea.svg', top);
       padding: 160px 80px 50px;
+
       @media (max-width: 576px) {
         padding: 50px 20px 15px;
       }
-      .ano{
+
+      .ano {
         font-size: 2.2;
       }
+      hr{
+        color: white;
+      }
     }
+
     .vertical-line {
       width: 8px;
       height: 80px;
@@ -134,15 +157,147 @@
     }
   }
 
-  .actualidad{
+  .actualidad {
+    background: linear-gradient(to top, #5D98A1, white);
     padding: 50px 0;
+
+    img {
+      width: 100%;
+    }
+
+    .img-recepcion {
+      @include disflex(center, center, column);
+    }
+  }
+
+  .myb-intro {
+    background-color: #5D98A1;
+
+
+    .hoja-myb {
+      @include bg-image('hoja-myv.svg', right, contain);
+      @include disflex(center, center, column);
+      padding: 0 10%;
+    }
+
+  }
+
+  .mision {
+    @include bg-image('myv-trazo-azul.svg', top);
+    padding: 100px 0 50px;
+    background-color: #5D98A1;
+    .faro{
+      max-width: 140px;
+    }
+  }
+
+  .vision{
+    background-color: #e2e2e2;
+    padding: 50px 0;
+  }
+
+  .beneficios{
+    background-color: #5D98A1;
+    padding: 50px 0;
+    .ben-hoja{
+      @include bg-image('ben-libreta.svg', top);
+      @include disflex(center, center, column);
+      padding: 100px 50px;
+      @media (max-width: 576px) {
+        padding: 70px 15px;
+      }
+    }
     img{
       width: 100%;
     }
-    .img-recepcion{
-      display: flex;
-      justify-content: center;
-      align-items: center;
+  }
+
+  .nivel{
+    @include bg-image('niv-bg.svg', top);
+    padding: 50px 0;
+
+    .hoja-nivel{
+      @include bg-image('ben-libreta.svg', top);
+      padding: 190px 8% 90px;
     }
   }
+
+  .retos{
+    @include bg-image('reto-bg.svg', top);
+    padding: 50px 0 100px;
+    .hoja-reto{
+      background-color: white;
+      border-radius: 30px;
+      padding: 30px 40px;
+    }
+  }
+
+  .estructura{
+    background-color: #5D98A1;
+    padding: 50px 0;
+    .hoja{
+      @include bg-image('estructura-bg.svg', center );
+      @media (min-width: 576px) {
+        background-position: right;
+        padding: 50px;
+      }
+      padding: 20px;
+      .hoja3-4{
+        @include bg-image('hoja3-4.svg', center);
+        @include disflex(center, center, column);
+        padding: 90px 40px 70px;
+        img{
+          width: 80%;
+          text-align: center;
+
+        }
+      }
+    }
+  }
+
+  .cpsp-cae{
+    background-color: #5D98A1;
+    .hoja{
+      @include bg-image('estructura-bg.svg', center );
+      padding: 30px;
+      .links{
+        background-color: #5D98A1;
+        border-radius: 40px 0 0 40px;
+        padding: 20px;
+        text-align: center;
+        a{
+          background-color: white;
+          color: #3765ad;
+          border-radius: 20px;
+          text-decoration: none;
+          padding: 10px;
+          margin: 10px 0;
+        }
+        p{
+          margin-bottom: 0;
+
+        }
+      }
+    }
+  }
+
+  .simbolos{
+    background-color: #5D98A1;
+    padding: 100px 0;
+    img{
+      width: 100%;
+      max-width: 1000px;
+    }
+    .sim-h1{
+      @include bg-image('sim-h1.svg', top, contain);
+      padding: 30px;
+    }
+    .sim-h2{
+      background-color: white;
+      border-radius: 30px;
+      padding: 25px;
+    }
+  }
+
+
 }
