--- a/src/app/pages/page/main/main.component.html
+++ b/src/app/pages/page/main/main.component.html
@@ -27,7 +27,7 @@
 
 <!--START CARDS MODULOS-->
 <section class="modulos d-flex justify-content-center">
-  <div class="container__modulos d-flex flex-wrap justify-content-around">
+  <div class="container d-flex flex-wrap justify-content-around">
 
     <div class="cards">
       <div
@@ -38,7 +38,7 @@
       <div class="content">
         <h3 class="modulo-title">MÓDULO 1</h3>
         <p>Introducción al Cooperativismo</p>
-        <a routerLink="/inicio/modulo-uno" style="margin-top: 25px;">Ver Módulo</a>
+        <a routerLink="/inicio/modulo-uno">Ver Módulo</a>
       </div>
     </div>
 
@@ -50,7 +50,7 @@
       <div class="content">
         <h3 class="modulo-title">MÓDULO 2</h3>
         <p>Cooperativas 1 </p>
-        <a routerLink="/inicio/modulo-dos" style="margin-top: 40px;">Ver Módulo</a>
+        <a routerLink="/inicio/modulo-dos" >Ver Módulo</a>
       </div>
     </div>
 
@@ -62,7 +62,7 @@
       <div class="content">
         <h3 class="modulo-title">MÓDULO 3</h3>
         <p>Cooperativas 2</p>
-        <a routerLink="/inicio/modulo-tres" style="margin-top: 40px;">Ver Módulo</a>
+        <a routerLink="/inicio/modulo-tres" >Ver Módulo</a>
       </div>
     </div>
 
@@ -74,7 +74,19 @@
       <div class="content">
         <h3 class="modulo-title">MÓDULO 4</h3>
         <p>Cooperativas 2</p>
-        <a routerLink="/inicio/modulo-cuatro" style="margin-top: 40px;">Ver Módulo</a>
+        <a routerLink="/inicio/modulo-cuatro" >Ver Módulo</a>
+      </div>
+    </div>
+
+    <div class="cards">
+      <div class="imgbox d-flex justify-content-center align-items-center">
+        <i class="fa-solid fa-people-group"></i>
+      </div>
+
+      <div class="content">
+        <h3 class="modulo-title">MÓDULO 5</h3>
+        <p>Educación Financiera</p>
+        <a routerLink="/inicio/modulo-cinco">Ver Módulo</a>
       </div>
     </div>
 
